--- a/Aula06/ex004.html
+++ b/Aula06/ex004.html
@@ -14,7 +14,8 @@
     <script>
         var nome = window.prompt('Qual é o seu nome?')
         document.writeln(`Olá ${nome}!Seu nome tem ${nome.length} letras<br>`)    
-        document.write(`Seu nome em Maiusculo fica ${nome.toUpperCase()}`)
+        document.write(`Seu nome em Maiusculo fica ${nome.toUpperCase()}<br>`)
+        document.write(`Seu nome em Minusculo fica ${nome.toLowerCase()}`)
     </script>
 </body>
 </html>
