--- a/Aula14ex/ex017/index.html
+++ b/Aula14ex/ex017/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div>
-            <select name="tabuada" id="seltab"></select>
+            <select name="tabuada" id="seltab" size="10"></select>
             <option value="">Digite um número acima</option>
         </div>
     </section>
