--- a/Teste/Aluno13.html
+++ b/Teste/Aluno13.html
@@ -15,7 +15,9 @@
     var itens = ["Faca", "Pederneira", "Corda", "Lanterna", "Luvas", "Chaves"];
     var mochila = [];
 
-    mochila.push(itens[2]);
+    mochila.push(5);
+    mochila.push(0);
+    mochila.push(3);
     
     /*
     cor.push("Preto");
@@ -32,8 +34,12 @@
     // cor[4] = "Branco";
     // cor[5] = "Vermelho";
 
-    document.write(cor[1]);
-    document.write(mochila[0]);
+    // document.write(cor[1]);
+    // document.write(mochila[0]);
+
+    document.write(itens[mochila[0]]+"<br>");
+    document.write(itens[mochila[1]]+"<br>");
+    document.write(itens[mochila[2]]+"<br>");
 
 
     </script>
