--- a/Aulas-JavaScript/Aula034.html
+++ b/Aulas-JavaScript/Aula034.html
@@ -9,7 +9,7 @@
             width: 100px;
             height: 100px;
             border: 1px solid #000;
-            background-color: #f00;
+            background-color: #fff;
             position:absolute;
             left: 0px;
             top: 0px;
@@ -20,6 +20,7 @@
 
         var px = 0;
         var py = 0;
+        var obj;
 
         function move(){
            var obj = document.getElementById("dv1");
@@ -42,12 +43,24 @@
                 py+= 10;
                 obj.style.top=py+"px";
             }   else if(tecla == 13){
-                alert("Evento keydown Removido")
+                obj.style.backgroundColor = "#fff";
+                alert("Evento keydown Removido");
                 this.removeEventListener("keydown",move);
             }  
         }
 
-        document.addEventListener("keydown",move);
+        function addClique(){
+            document.addEventListener("keydown",move);
+            obj.style.backgroundColor = "#f00";
+
+        }
+
+        function iniciar(){
+            obj = document.getElementById("dv1");
+            obj.addEventListener("click",addClique);
+        }
+
+        window.addEventListener("load",iniciar);
 
     </script>
 
